--- a/src/sections/Projects/projects.css
+++ b/src/sections/Projects/projects.css
@@ -61,6 +61,7 @@
 }
 
 .empty-text {
+    color:var(--primary);
     font-size: 15px;
     font-weight: 400;
 }
